--- a/html/events.html
+++ b/html/events.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 	<title>Admin Panel | Project Now</title>
+	<link rel="shortcut icon" href="../favicon.ico" / >
 	
 	<!-- scripts -->
 <!--
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 -->
-	
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/events.css">
