--- a/html/events.html
+++ b/html/events.html
@@ -33,7 +33,7 @@
 	</div><!--/container-fluid-->
 	
 	<div id="event-modal" class="modal fade">
-		<div class="modal-dialog" role="document">
+		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
