working implementation of bulk upload; basic verification of potential events

--- a/html/events.html
+++ b/html/events.html
@@ -12,7 +12,7 @@
 		<div class="container-fluid">
 			<ul class="nav navbar-nav">
 				<li><a>Project Now Administrative Panel</a></li>
-				<li class="active"><a href="#">Events</a></li>
+				<li class="active"><a>Events</a></li>
 				<li><a>Metrics</a></li>
 			</ul>
 		</div>
@@ -22,7 +22,7 @@
 			<div class="col-md-2 sidebar">
 				<ul>
 					<li><a>View</a></li>
-					<li><a>Upload</a></li>
+					<li><a href="upload.html">Upload</a></li>
 				</ul>
 			</div><!--/sidebar-->
 			<div class="col-md-10 main">
@@ -59,6 +59,5 @@
 	<!-- bootstrap??  Do I really want these additinoal dependencies-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script src="../actions/globalActions.js"></script>
 </body>
 </html>
