working implementation of bulk upload; basic verification of potential events (2); accidentally only staged half the commit

--- a/html/upload.html
+++ b/html/upload.html
@@ -25,11 +25,9 @@
 					<li><a>Upload</a></li>
 				</ul>
 			</div><!--/sidebar-->
-			<div class="col-md-10 main container">
+			<div class="col-md-10 main">
 				<h3>Upload</h3>
-				<div class="row">
 					<label class="btn btn-default">Bulk Upload Events<input type="file" id="bulkUploadBtn" style="display:none"></label>
-				</div><!--/row-->
 			</div><!--/main-->
 		</div><!--/row-->
 	</div><!--/container-fluid-->
@@ -41,5 +39,6 @@
 	<!-- bootstrap??  Do I really want these additinoal dependencies-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.3.0/d3.min.js"></script>
 </body>
 </html>
