--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -16,7 +16,7 @@
 <body>
 	<div id="main"></div>
 	
-	<script src="https://www.gstatic.com/firebasejs/3.5.1/firebase.js"></script>
+	<!--	<script src="https://www.gstatic.com/firebasejs/3.5.1/firebase.js"></script> -->
 	<script src='../build/bundle.js'></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.3.0/d3.min.js"></script>
 </body>
