--- a/assets/index.html
+++ b/assets/index.html
@@ -4,7 +4,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
   >
-	
+	<title>HotSpot Admin</title>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<style>
 		body {
