more robust redirect

--- a/assets/getHotspot.html
+++ b/assets/getHotspot.html
@@ -2,7 +2,10 @@
 <head>
 </head>
 <body>
-	<meta http-equiv="refresh" content="0; url=marketing/index.html#download" />
-	<a href="marketing/index.html#download">Redirect</a>
+	<meta http-equiv="refresh" content="1; url=marketing/index.html#download" />
+	<script>
+		window.location = window.location.origin + '/marketing/index.html#download'
+	</script>
+	If you were not redirected automatically, <a href="marketing/index.html#download">click here</a> to continue to HotSpot.
 </body>
 </html>
