add video links to marketing site

--- a/assets/getHotspot.html
+++ b/assets/getHotspot.html
@@ -2,10 +2,10 @@
 <head>
 </head>
 <body>
-	<meta http-equiv="refresh" content="1; url=marketing/index.html#download" />
+	<meta http-equiv="refresh" content="1; url=marketing/index.html" />
 	<script>
-		window.location = window.location.origin + '/marketing/index.html#download'
+		window.location = window.location.origin + '/marketing/index.html'
 	</script>
-	If you were not redirected automatically, <a href="marketing/index.html#download">click here</a> to continue to HotSpot.
+	If you were not redirected automatically, <a href="marketing/index.html">click here</a> to continue to HotSpot.
 </body>
 </html>
