--- a/assets/marketing/index.html
+++ b/assets/marketing/index.html
@@ -118,7 +118,7 @@
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
                         <h2>Explore the features.</h2>
-                        <p class="text-muted">Check out what you can do!</p>
+                        <p class="text-muted">Check out what you can do! Click the icons to see feature demo videos.</p>
                         <hr>
                     </div>
                 </div>
@@ -143,32 +143,48 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="icon-screen-smartphone text-primary"></i>
-                                    <h3>Device Mockups</h3>
-                                    <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                                    <a href="https://youtu.be/ZuAXoW2D4fE" target="_blank"><i class="icon-screen-smartphone text-primary"></i>
+                                    <h3>Browse</h3></a>
+                                    <p class="text-muted">Browse your personalized event feed</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="icon-camera text-primary"></i>
-                                    <h3>Flexible Use</h3>
-                                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                                    <a href="" target="_blank"><i class="icon-share text-primary"></i>
+                                    <h3>Share</h3></a>
+                                    <p class="text-muted">Share events with your friends on social media</p>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="icon-present text-primary"></i>
-                                    <h3>Free to Use</h3>
-                                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                                    <a href="https://youtu.be/eENdcoysOfI" target="_blank"><i class="icon-magnifier text-primary"></i>
+                                    <h3>Search</h3></a>
+                                    <p class="text-muted">Use our powerful search feature to find exactly the kind of events you're looking for</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="icon-lock-open text-primary"></i>
-                                    <h3>Open Source</h3>
-                                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                                    <a href="https://youtu.be/9TnNzLVG58Q" target="_blank"><i class="icon-plus text-primary"></i>
+                                    <h3>Create</h3></a>
+                                    <p class="text-muted">Create your own events and get the word out</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="feature-item">
+                                    <a href="https://youtu.be/hXRllHSRO84" target="_blank"><i class="icon-user text-primary"></i>
+                                    <h3>Customize</h3></a>
+                                    <p class="text-muted">Create a profile a set your interests</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="feature-item">
+                                    <a href="https://youtu.be/DQ83hDnAORY" target="_blank"><i class="icon-picture text-primary"></i>
+                                    <h3>Remember</h3></a>
+                                    <p class="text-muted">Create and share postcards with your pictures from the events you attend</p>
                                 </div>
                             </div>
                         </div>
