Added github link

--- a/assets/marketing/index.html
+++ b/assets/marketing/index.html
@@ -106,6 +106,9 @@
                     <div class="badges">
                         <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
                         <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
+                        <br><br>
+                        <p>Check out our Github Repository!</p>
+                        <a href="https://github.com/SCCapstone/projectnow"><img src="img/githubMark.png" alt=""></a>
                     </div>
                 </div>
             </div>
