--- a/assets/marketing/index.html
+++ b/assets/marketing/index.html
@@ -102,13 +102,13 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <h2 class="section-heading">Get HotSpot now!</h2>
-                    <p>We love iOS and Android! Download now to get started!</p>
+                    <p>We love iOS and Android! We'll be on the App Store and Play Store soon!<!--Download now to get started! --></p>
                     <div class="badges">
-                        <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
-                        <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
+                        <a class="badge-link" href="javascript:void(0)"><img src="img/google-play-badge.svg" alt=""></a>
+                        <a class="badge-link" href="javascript:void(0)"><img src="img/app-store-badge.svg" alt=""></a>
                         <br><br>
                         <p>Check out our Github Repository!</p>
-                        <a href="https://github.com/SCCapstone/projectnow"><img src="img/githubMark.png" alt=""></a>
+                        <a href="https://github.com/SCCapstone/projectnow" target="_blank"><img src="img/githubMark.png" alt=""></a>
                     </div>
                 </div>
             </div>
