embedded video playlist (removed original link); add member names to bottom of page

--- a/assets/marketing/index.html
+++ b/assets/marketing/index.html
@@ -146,15 +146,15 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <a href="https://youtu.be/ZuAXoW2D4fE" target="_blank"><i class="icon-screen-smartphone text-primary"></i>
-                                    <h3>Browse</h3></a>
+                                    <i class="icon-screen-smartphone text-primary"></i>
+                                    <h3>Browse</h3>
                                     <p class="text-muted">Browse your personalized event feed</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <a href="" target="_blank"><i class="icon-share text-primary"></i>
-                                    <h3>Share</h3></a>
+                                    <i class="icon-share text-primary"></i>
+                                    <h3>Share</h3>
                                     <p class="text-muted">Share events with your friends on social media</p>
                                 </div>
                             </div>
@@ -162,15 +162,15 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <a href="https://youtu.be/eENdcoysOfI" target="_blank"><i class="icon-magnifier text-primary"></i>
-                                    <h3>Search</h3></a>
+                                    <i class="icon-magnifier text-primary"></i>
+                                    <h3>Search</h3>
                                     <p class="text-muted">Use our powerful search feature to find exactly the kind of events you're looking for</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <a href="https://youtu.be/9TnNzLVG58Q" target="_blank"><i class="icon-plus text-primary"></i>
-                                    <h3>Create</h3></a>
+                                    <i class="icon-plus text-primary"></i>
+                                    <h3>Create</h3>
                                     <p class="text-muted">Create your own events and get the word out</p>
                                 </div>
                             </div>
@@ -178,20 +178,25 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <a href="https://youtu.be/hXRllHSRO84" target="_blank"><i class="icon-user text-primary"></i>
-                                    <h3>Customize</h3></a>
+                                    <i class="icon-user text-primary"></i>
+                                    <h3>Customize</h3>
                                     <p class="text-muted">Create a profile a set your interests</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <a href="https://youtu.be/DQ83hDnAORY" target="_blank"><i class="icon-picture text-primary"></i>
-                                    <h3>Remember</h3></a>
+                                    <i class="icon-picture text-primary"></i>
+                                    <h3>Remember</h3>
                                     <p class="text-muted">Create and share postcards with your pictures from the events you attend</p>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 center-block text-center">
+                    <iframe class="responsive-video" src="https://www.youtube.com/embed/ZuAXoW2D4fE?list=PLWJt25SZpV4B2a_1wHz1xXr4KKhw-ck5U" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -218,15 +223,21 @@
         <div class="container">
             <p>&copy; 2016 HotSpot. All Rights Reserved.</p>
             <ul class="list-inline">
-                <!--<li>
-                    <a href="#">Privacy</a>
+                <li>
+                    Daniel Clements
                 </li>
                 <li>
-                    <a href="#">Terms</a>
+                    Michael Bradley
                 </li>
                 <li>
-                    <a href="#">FAQ</a>
-                </li>-->
+                    Conor Campbell
+                </li>
+                <li>
+                    Logan Murray
+                </li>
+                <li>
+                    Drew Sappenfield
+                </li>
             </ul>
         </div>
     </footer>
