--- a/assets/marketing/index.html
+++ b/assets/marketing/index.html
@@ -121,7 +121,7 @@
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
                         <h2>Explore the features.</h2>
-                        <p class="text-muted">Check out what you can do! Click the icons to see feature demo videos.</p>
+                        <p class="text-muted">Check out what you can do!</p>
                         <hr>
                     </div>
                 </div>
