--- a/assets/marketing/index.html
+++ b/assets/marketing/index.html
@@ -180,7 +180,7 @@
                                 <div class="feature-item">
                                     <i class="icon-user text-primary"></i>
                                     <h3>Customize</h3>
-                                    <p class="text-muted">Create a profile a set your interests</p>
+                                    <p class="text-muted">Create a profile and set your interests</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
