--- a/assets/marketing/index.html
+++ b/assets/marketing/index.html
@@ -45,7 +45,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <img class="navbar-brand page-scroll" href="#page-top" src="img/hs-title.png"></img>
+                <img class="navbar-brand page-scroll" href="#page-top" src="img/hs-title.png" style="display:none"></img>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -73,8 +73,13 @@
                 <div class="col-sm-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>HotSpot is an app for connecting locals and tourists to the businesses and events in their area, building a sense of community, and bringing out the best in your city.</h1>
-                            <a href="#download" class="btn btn-outline btn-xl page-scroll">Start Now for Free!</a>
+                            <img src="img/hs-title.png"></img>
+                            <h2>LIFE IS FOR LIVING. NEVER MISS OUT AGAIN.</h2>
+                            <h3>Tired of finding out about exciting events you'd love to attend after they are over?</h3>
+                            <h3>The new HotSpot App is the hottest way to stay connected to community events in Atlantic City. Never miss out again! Get personalized weekly updates on events you're interested in.</h3>
+                            <h3>Always know what's happening around town, from shows to dining to festivals and everything in between. You'll find it all on HotSpot.</h3>
+                            <h3>Coming summer 2017</h3>
+                            <a href="#download" class="btn btn-outline btn-xl page-scroll">Download Soon!</a>
                         </div>
                     </div>
                 </div>
@@ -84,7 +89,7 @@
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="img/feed-screen-shot.png" class="img-responsive" alt="">
+                                    <img src="img/atlantic-city-feed-scrnshot.png" class="img-responsive" alt="">
                                 </div>
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -101,15 +106,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h2 class="section-heading">Get HotSpot now!</h2>
-                    <p>We love iOS and Android! We'll be on the App Store and Play Store soon!<!--Download now to get started! --></p>
-                    <div class="badges">
+                    <h2 class="section-heading">Download HotSpot this summer!</h2>
+                    <p>Coming soon to the Apple App Store and Google Play Store.</p>
+                    <!--<div class="badges">
                         <a class="badge-link" href="javascript:void(0)"><img src="img/google-play-badge.svg" alt=""></a>
                         <a class="badge-link" href="javascript:void(0)"><img src="img/app-store-badge.svg" alt=""></a>
                         <br><br>
                         <p>Check out our Github Repository!</p>
                         <a href="https://github.com/SCCapstone/projectnow" target="_blank"><img src="img/githubMark.png" alt=""></a>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
@@ -194,18 +199,58 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-12 center-block text-center">
-                    <iframe class="responsive-video" src="https://www.youtube.com/embed/ZuAXoW2D4fE?list=PLWJt25SZpV4B2a_1wHz1xXr4KKhw-ck5U" frameborder="0" allowfullscreen></iframe>
-                </div>
-            </div>
         </div>
     </section>
 
     <section id="contact" class="contact bg-primary">
         <div class="container">
-            <h2>We <i class="fa fa-heart"></i> new friends!</h2>
-            <ul class="list-inline list-social">
+            <h2>We'll notify you when the app is released!</h2>
+                <div class="container">
+                    <div class="row">
+                    <div class="col-md-6 col-md-offset-3">
+                        <legend class="text-center" style="color:#fff">Contact us</legend>
+                        <div id="success-container" class="text-center" style="display:none;">
+                            <p class="lead text-success"><span class="glyphicon glyphicon-ok"></span></p>
+                            <p class="lead">Your message has been sent successfully!</p>
+                        </div>
+
+                        <div id="form-container">
+
+                            <!-- Name input-->
+                            <div class="form-group">
+                                <label class="col-md-3 control-label" for="name">Name</label>
+                                <div class="col-md-9">
+                                <input id="name" name="name" type="text" placeholder="Your name" class="form-control">
+                                </div>
+                            </div>
+
+                            <!-- Email input-->
+                            <div class="form-group">
+                                <label class="col-md-3 control-label" for="email">Your E-mail</label>
+                                <div class="col-md-9">
+                                <input id="email" name="email" type="text" placeholder="Your email" class="form-control">
+                                </div>
+                            </div>
+
+                            <!-- Message body -->
+                            <div class="form-group">
+                                <label class="col-md-3 control-label" for="message">Your message</label>
+                                <div class="col-md-9">
+                                <textarea class="form-control" id="message" name="message" placeholder="Please enter your message here..." rows="5"></textarea>
+                                </div>
+                            </div>
+
+                            <!-- Form actions -->
+                            <div class="form-group">
+                                <div class="col-md-12 text-right" id="spin-area">
+                                    <button id="submit" class="btn btn-primary btn-lg">Submit</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--<ul class="list-inline list-social">
                 <li class="social-twitter">
                     <a href="#"><i class="fa fa-twitter"></i></a>
                 </li>
@@ -215,36 +260,34 @@
                 <li class="social-google-plus">
                     <a href="#"><i class="fa fa-google-plus"></i></a>
                 </li>
-            </ul>
+            </ul>-->
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2016 HotSpot. All Rights Reserved.</p>
-            <ul class="list-inline">
-                <li>
-                    Daniel Clements
-                </li>
-                <li>
-                    Michael Bradley
-                </li>
-                <li>
-                    Conor Campbell
-                </li>
-                <li>
-                    Logan Murray
-                </li>
-                <li>
-                    Drew Sappenfield
-                </li>
-            </ul>
+            <p>&copy; 2017 HotSpot. All Rights Reserved.</p>
         </div>
     </footer>
 
     <!-- jQuery -->
     <script src="lib/jquery/jquery.min.js"></script>
-
+    <!-- show small logo on scroll -->
+    <script>
+        $(document).on('scroll', function() {
+            var img = $('img.navbar-brand')
+            var imgVisible = img.css('display') != 'none'
+            if (window.scrollY > 100) {
+                if (!imgVisible) {
+                    img.fadeIn('slow')
+                }
+            } else {
+                if (imgVisible) {
+                    img.fadeOut()
+                }
+            }
+        })
+    </script>
     <!-- Bootstrap Core JavaScript -->
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
 
@@ -254,6 +297,11 @@
     <!-- Theme JavaScript -->
     <script src="js/new-age.min.js"></script>
 
+    <!-- Firebase CDN -->
+   	<script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+
+    <!-- Contact form management -->
+    <script src="js/contact.js"></script>
 </body>
 
 </html>
