update static marketing site text, feed screenshot

--- a/server/static/assets/marketing/index.html
+++ b/server/static/assets/marketing/index.html
@@ -51,9 +51,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
+                    <!--<li>
                         <a class="page-scroll" href="#download">Download</a>
-                    </li>
+                    </li>-->
                     <li>
                         <a class="page-scroll" href="#features">Features</a>
                     </li>
@@ -76,10 +76,18 @@
                             <img src="static/assets/marketing/img/hs-title.png"></img>
                             <h2>LIFE IS FOR LIVING. NEVER MISS OUT AGAIN.</h2>
                             <h3>Tired of finding out about exciting events you'd love to attend after they are over?</h3>
-                            <h3>The new HotSpot App is the hottest way to stay connected to community events in Atlantic City. Never miss out again! Get personalized weekly updates on events you're interested in.</h3>
+                            <h3>The new HotSpot App is the hottest way to stay connected to community events in Atlantic City, Philadelphia, and the Jersey Shore. Never miss out again! Get personalized weekly updates on events you're interested in.</h3>
                             <h3>Always know what's happening around town, from shows to dining to festivals and everything in between. You'll find it all on HotSpot.</h3>
-                            <h3>Coming summer 2017</h3>
-                            <a href="#download" class="btn btn-outline btn-xl page-scroll">Download Soon!</a>
+                            <h3>Available Now!</h3>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <img src="static/assets/marketing/img/app-store-badge.svg" class="center-block" style="height:50px;width:auto;" />
+                                </div>
+                                <div class="col-md-6">
+                                    <img src="static/assets/marketing/img/google-play-badge.svg" class="center-block" style="height:50px;width:auto;" />
+                                </div>
+                            </div>
+                            <!--<a href="#download" class="btn btn-outline btn-xl page-scroll">Download Soon!</a>-->
                         </div>
                     </div>
                 </div>
@@ -89,7 +97,7 @@
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="static/assets/marketing/img/atlantic-city-feed-scrnshot.png" class="img-responsive" alt="">
+                                    <img src="static/assets/marketing/img/atlantic-city-feed-scrnshot-new.png" class="img-responsive" alt="">
                                 </div>
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -101,25 +109,25 @@
             </div>
         </div>
     </header>
-
+<!--
     <section id="download" class="download bg-primary text-center">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <h2 class="section-heading">Download HotSpot this summer!</h2>
                     <p>Coming soon to the Apple App Store and Google Play Store.</p>
-                    <!--<div class="badges">
+                    <div class="badges">
                         <a class="badge-link" href="javascript:void(0)"><img src="img/google-play-badge.svg" alt=""></a>
                         <a class="badge-link" href="javascript:void(0)"><img src="img/app-store-badge.svg" alt=""></a>
                         <br><br>
                         <p>Check out our Github Repository!</p>
                         <a href="https://github.com/SCCapstone/projectnow" target="_blank"><img src="img/githubMark.png" alt=""></a>
-                    </div>-->
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-
+!-->
     <section id="features" class="features">
         <div class="container">
             <div class="row">
