fix unix time -> date time conversion casting sequence; add app/play store links to marketing site; remove notification/contact form html/js

--- a/server/static/assets/marketing/index.html
+++ b/server/static/assets/marketing/index.html
@@ -81,10 +81,14 @@
                             <h3>Available Now!</h3>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <img src="static/assets/marketing/img/app-store-badge.svg" class="center-block" style="height:50px;width:auto;" />
+                                    <a href="https://appsto.re/us/069Ukb.i">
+                                        <img src="static/assets/marketing/img/app-store-badge.svg" class="center-block" style="height:50px;width:auto;" />
+                                    </a>
                                 </div>
                                 <div class="col-md-6">
-                                    <img src="static/assets/marketing/img/google-play-badge.svg" class="center-block" style="height:50px;width:auto;" />
+                                    <a href="https://play.google.com/store/apps/details?id=com.pg360.hotspot&hl=en">
+                                        <img src="static/assets/marketing/img/google-play-badge.svg" class="center-block" style="height:50px;width:auto;" />
+                                    </a>
                                 </div>
                             </div>
                             <!--<a href="#download" class="btn btn-outline btn-xl page-scroll">Download Soon!</a>-->
@@ -210,67 +214,19 @@
         </div>
     </section>
 
-    <section id="contact" class="contact bg-primary">
-        <div class="container">
-            <h2>We'll notify you when the app is released!</h2>
-                <div class="container">
-                    <div class="row">
-                    <div class="col-md-6 col-md-offset-3">
-                        <legend class="text-center" style="color:#fff">Contact us</legend>
-                        <div id="success-container" class="text-center" style="display:none;">
-                            <p class="lead text-success"><span class="glyphicon glyphicon-ok"></span></p>
-                            <p class="lead">Your message has been sent successfully!</p>
-                        </div>
-
-                        <div id="form-container">
-
-                            <!-- Name input-->
-                            <div class="form-group">
-                                <label class="col-md-3 control-label" for="name">Name</label>
-                                <div class="col-md-9">
-                                <input id="name" name="name" type="text" placeholder="Your name" class="form-control">
-                                </div>
-                            </div>
-
-                            <!-- Email input-->
-                            <div class="form-group">
-                                <label class="col-md-3 control-label" for="email">Your E-mail</label>
-                                <div class="col-md-9">
-                                <input id="email" name="email" type="text" placeholder="Your email" class="form-control">
-                                </div>
-                            </div>
-
-                            <!-- Message body -->
-                            <div class="form-group">
-                                <label class="col-md-3 control-label" for="message">Your message</label>
-                                <div class="col-md-9">
-                                <textarea class="form-control" id="message" name="message" placeholder="Please enter your message here..." rows="5"></textarea>
-                                </div>
-                            </div>
-
-                            <!-- Form actions -->
-                            <div class="form-group">
-                                <div class="col-md-12 text-right" id="spin-area">
-                                    <button id="submit" class="btn btn-primary btn-lg">Submit</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--<ul class="list-inline list-social">
-                <li class="social-twitter">
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                </li>
-                <li class="social-facebook">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                </li>
-                <li class="social-google-plus">
-                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                </li>
-            </ul>-->
-        </div>
-    </section>
+    <!--<section id="contact" class="contact bg-primary">
+        <ul class="list-inline list-social">
+            <li class="social-twitter">
+                <a href="#"><i class="fa fa-twitter"></i></a>
+            </li>
+            <li class="social-facebook">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+            </li>
+            <li class="social-google-plus">
+                <a href="#"><i class="fa fa-google-plus"></i></a>
+            </li>
+        </ul>
+    </section>-->
 
     <footer>
         <div class="container">
@@ -304,12 +260,6 @@
 
     <!-- Theme JavaScript -->
     <script src="static/assets/marketing/js/new-age.min.js"></script>
-
-    <!-- Firebase CDN -->
-   	<script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
-
-    <!-- Contact form management -->
-    <script src="static/assets/marketing/js/contact.js"></script>
 </body>
 
 </html>
